--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -19,47 +19,48 @@
             <main>
                 <section class="container">
                     <div class="header_container">
-                        <h1>Produções</h1>
-                        <a href="pages/productions.html">
-                            <button>Mais</button>
+                        <h1>Overview da História</h1>
+                        <a href="pages/history.html">
+                            <button>Ler História</button>
                         </a>
                     </div>
                     <div class="divisor_line"></div>
-                    <div class="content_container stack">
-                        <p>O Homem do Machado</p>
-                        <a href="https://kallfsd.github.io/hm-website/">
-                            <button>Ver Produção</button>
-                        </a>
+                    <div class="content_container">
+                        <p>O fantasma de um velho lenhador, assombra o vale de Wallstreet, diante disto, João Medeiros Guimaranez, se vê curioso para desvendar os mistérios que assolam a floresta assombrada pelos contos narrativos que são passadas de seus ancestrais para os respectivos descendentes, entretanto o que João não conta, é que há muitos segredos a serem revelados a respeito de seu passado!</p>
                     </div>
                 </section>
 
                 <section class="container">
                     <div class="header_container">
-                        <h1>Canais de Contato</h1>
-                        <a href="pages/contact.html">
-                            <button>Mais</button>
-                        </a>
+                        <h1>Personagens</h1>
+                        <button href="#">Ver Todos os Personagens</button>
                     </div>
                     <div class="divisor_line"></div>
                     <div class="content_container">
                         <section class="subcontent_column_container">
                             <section class="subcontent_grid_container">
-                                <a href="https://www.linkedin.com/in/joão-pedro-gabriel-7628b02b3"><div class="character_container">
-                                    <img src="assets/images/linkedin_logo.svg" alt="Linked In Logo">
+                                <a href="#"><div class="character_container">
+                                    <img src="" alt="Character_Art">
                                     <section class="character_name">
-                                        <h1>Linked In</h1>
+                                        <h1>João Medeiros Guimaranez</h1>
                                     </section>
                                 </div></a>
-                                <a href="https://github.com/joaopedrogabriel"><div class="character_container">
-                                    <img src="assets/images/github_logo.svg" alt="Github Logo">
+                                <a href="#"><div class="character_container">
+                                    <img src="" alt="Character_Art">
                                     <section class="character_name">
-                                        <h1>Github</h1>
+                                        <h1>João Medeiros Guimaranez</h1>
                                     </section>
                                 </div></a>
-                                <a href="https://www.instagram.com/joaogabriel_pedrobr/"><div class="character_container">
-                                    <img src="assets/images/instagram_logo.svg" alt="Instagram Logo">
+                                <a href="#"><div class="character_container">
+                                    <img src="" alt="Character_Art">
                                     <section class="character_name">
-                                        <h1>Instagram</h1>
+                                        <h1>João Medeiros Guimaranez</h1>
+                                    </section>
+                                </div></a>
+                                <a href="#"><div class="character_container">
+                                    <img src="" alt="Character_Art">
+                                    <section class="character_name">
+                                        <h1>João Medeiros Guimaranez</h1>
                                     </section>
                                 </div></a>
                             </section>
