--- a/pages/history.html
+++ b/pages/history.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="divisor_line"></div>
                     <div class="content_container">
-                        <p>Mesmo tendo aprendido a lidar com aplicações .NET a busca por conhecimento não acaba, hoje estou aprendendo a lidar melhor com aplicações em Java, e retomando alguns conceitos em desenvolvimento web, iniciei um novo Bootcamp de Análise e Aplicação de Dados na DIO patrocinada pela Heineken, e estou me aprofundando em Orientação a Objetos na Faculdade...</p>
+                        <p>Mesmo tendo aprendido a lidar com aplicações .NET a busca por conhecimento não acaba, hoje estou aprendendo a lidar melhor com aplicações em Java, e retomando alguns conceitos em desenvolvimento web, e estou me aprofundando em Programação Front-End e Estrutura de Dados.</p>
                         <p>Como todo livro aberto conta histórias, esta ainda está sendo escrita, hoje sou grato por minhas conquistas e que tudo que estou fazendo hoje é graças as pessoas ao meu redor, e que só tenho a agradecer à eles por tudo isso, espero que este trecho desta história possa inspirar muitos jovens como eu, a seguirem o rumo correto em suas vidas...</p>
                     </div>
                 </section>
@@ -63,7 +63,7 @@
             <aside>
                 <section class="container">
                     <section class="header_container">
-                        <h1>Sobre o Autor</h1>
+                        <h1>Sobre Mim</h1>
                     </section>
                     <div class="divisor_line"></div>
                     <section class="subcontent_image_container">
