--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -19,52 +19,30 @@
             <main>
                 <section class="container">
                     <div class="header_container">
-                        <h1>Overview da História</h1>
-                        <a href="pages/history.html">
-                            <button>Ler História</button>
-                        </a>
+                        <h1>Termos de Uso</h1>
                     </div>
                     <div class="divisor_line"></div>
                     <div class="content_container">
-                        <p>O fantasma de um velho lenhador, assombra o vale de Wallstreet, diante disto, João Medeiros Guimaranez, se vê curioso para desvendar os mistérios que assolam a floresta assombrada pelos contos narrativos que são passadas de seus ancestrais para os respectivos descendentes, entretanto o que João não conta, é que há muitos segredos a serem revelados a respeito de seu passado!</p>
-                    </div>
-                </section>
 
-                <section class="container">
-                    <div class="header_container">
-                        <h1>Personagens</h1>
-                        <button href="#">Ver Todos os Personagens</button>
-                    </div>
-                    <div class="divisor_line"></div>
-                    <div class="content_container">
-                        <section class="subcontent_column_container">
-                            <section class="subcontent_grid_container">
-                                <a href="#"><div class="character_container">
-                                    <img src="" alt="Character_Art">
-                                    <section class="character_name">
-                                        <h1>João Medeiros Guimaranez</h1>
-                                    </section>
-                                </div></a>
-                                <a href="#"><div class="character_container">
-                                    <img src="" alt="Character_Art">
-                                    <section class="character_name">
-                                        <h1>João Medeiros Guimaranez</h1>
-                                    </section>
-                                </div></a>
-                                <a href="#"><div class="character_container">
-                                    <img src="" alt="Character_Art">
-                                    <section class="character_name">
-                                        <h1>João Medeiros Guimaranez</h1>
-                                    </section>
-                                </div></a>
-                                <a href="#"><div class="character_container">
-                                    <img src="" alt="Character_Art">
-                                    <section class="character_name">
-                                        <h1>João Medeiros Guimaranez</h1>
-                                    </section>
-                                </div></a>
-                            </section>
-                        </section>
+                        <div class="text-license_container">
+                            <h1>Você é livre para:</h1>
+
+                                <p><b>Compartilhar</b> - copiar e redistribuir o material em qualquer meio ou formato para qualquer finalidade, mesmo comercialmente.</p>
+
+                                <p><b>Adaptar</b> - remixar, transformar e desenvolver o material para qualquer propósito, até mesmo comercial.</p>
+
+                                <p>O licenciante não pode revogar essas liberdades, desde que você siga os termos da licença.</p>
+
+                            <h1>Nos seguintes termos:</h1>
+
+                                <p><b>Atribuição</b> - Você deve dar o devido crédito , fornecer um link para a licença e indicar se foram feitas alterações . Você pode fazê-lo de qualquer maneira razoável, mas não de forma que sugira que o licenciante endossa você ou seu uso.</p>
+                                
+                                <p><b>Sem restrições adicionais</b> - Você não pode aplicar termos legais ou medidas tecnológicas que restrinjam legalmente outros de fazerem qualquer coisa que a licença permita.</p>
+
+                        </div>
+
+
+                        <p>Para saber mais sobre a licença de uso, visite o <a id="cc-link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons CC-BY-4.0</a></p>
                     </div>
                 </section>
             </main>
