last_commit_before_send_form

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -7,7 +7,7 @@
 
         <title>Página Inicial</title>
 
-        <script src="script.js" defer></script>
+        <script src="../script.js" defer></script>
 
     </head>
 
@@ -17,6 +17,17 @@
 
         <section class="main_container">    
             <main>
+                <section class="container">
+                    <div class="header_container">
+                        <h1>Sobre Nós</h1>
+                    </div>
+                    <div class="divisor_line"></div>
+                    <div class="content_container">
+                        <p>Nós da Kall Enterprise, trabalhamos com os melhores produtos da web para trazer o melhor do que a Visão dos dias atuais pode trazer.</p>
+                        <p>A combinação de tecnologia com inovação pode trazer um emaranhado de coisas boas, quando o assunto se trata de Serviços oferecidos. Divirta-se lendo ou consumindo nossos produtos oferecidos por nossas filiais.</p>
+                        <p>Em caso de suporte, ajuda ou dúvida sobre nossos produtos, ou se desejar um orçamento dos nossos serviços, favor entrar em contato em nossos canais oficiais.</p>
+                    </div>
+                </section>
                 <section class="container">
                     <div class="header_container">
                         <h1>Produções</h1>
@@ -45,19 +56,19 @@
                         <section class="subcontent_column_container">
                             <section class="subcontent_grid_container">
                                 <a href="https://www.linkedin.com/in/joão-pedro-gabriel-7628b02b3"><div class="character_container">
-                                    <img src="assets/images/linkedin_logo.svg" width="100px" height="100px" alt="Linked In Logo">
+                                    <img src="../assets/images/linkedin_logo.svg" width="100px" height="100px" alt="Linked In Logo">
                                     <section class="character_name">
                                         <h1>Linked In</h1>
                                     </section>
                                 </div></a>
                                 <a href="https://github.com/joaopedrogabriel"><div class="character_container">
-                                    <img src="assets/images/github_logo.svg" width="100px" height="100px" alt="Github Logo">
+                                    <img src="../assets/images/github_logo.svg" width="100px" height="100px" alt="Github Logo">
                                     <section class="character_name">
                                         <h1>Github</h1>
                                     </section>
                                 </div></a>
                                 <a href="https://www.instagram.com/joaogabriel_pedrobr/"><div class="character_container">
-                                    <img src="assets/images/instagram_logo.svg" width="100px" height="100px" alt="Instagram Logo">
+                                    <img src="../assets/images/instagram_logo.svg" width="100px" height="100px" alt="Instagram Logo">
                                     <section class="character_name">
                                         <h1>Instagram</h1>
                                     </section>
@@ -75,7 +86,7 @@
                     </section>
                     <div class="divisor_line"></div>
                     <section class="subcontent_image_container">
-                        <img src="assets/images/Logo_KallFullstackDevelopment.svg" width="200px" height="200px" alt="Author_Photo">
+                        <img src="../assets/images/Logo_KallFullstackDevelopment.svg" width="200px" height="200px" alt="Author_Photo">
                     </section>
                     <section class="content_container">
                         <h1>Desenvolvimento</h1> <p>Kall - FullStack Development</p>
@@ -100,7 +111,7 @@
         
 
         <script defer>
-            const levelBuild = 0;
+            const levelBuild = 1;
 
             // Função para construir a página dinamicamente
             document.addEventListener("DOMContentLoaded", () => {
