--- a/pages/support_contact.html
+++ b/pages/support_contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Author:João Pedro Gabriel, Category: Dark Horror History, Title: O Homem do Machado">
+        <meta name="description" content="Author:João Pedro Gabriel, Category: Dark Horror History, Title: Kall Website">
 
         <title>Contato</title>
 
@@ -79,29 +79,23 @@
                     </section>
                     <div class="divisor_line"></div>
                     <section class="subcontent_image_container">
-                        <img src="../assets/images/AuthorPicture.svg" width="200px" height="200px" alt="Author_Photo">
+                        <img src="../assets/images/Logo_KallFullstackDevelopment.svg" width="200px" height="200px" alt="Author_Photo">
                     </section>
-                    <section class="subcontent_container">
-                        <h1>Nome:</h1> <p>João Pedro Gabriel</p>
-                    </section>
-                    <section class="subcontent_container">
-                        <h1>Pseudônimo:</h1> <p>Kalleby7034</p>
-                    </section>
-
                     <section class="content_container">
-                        <p><b>Olá! Meu nome é João Pedro Gabriel</b></p>
-                        <p>Tenho 18 anos, e eu gosto muito de Programação, e estou cursando Engenharia de Software na UniCesumar, e me especializando em desenvolvimento web, sou certificado na DIO em desenvolvimento de aplicações em .NET, estou buscando cada dia mais melhorar algum aspecto da minha carreira.</p>
+                        <h1>Desenvolvimento</h1> <p>Kall - FullStack Development</p>
                     </section>
-
+                    <section class="content_container">
+                        <h1>Mídia e Conteúdo Digital</h1> <p>Kall - Productions</p>
+                    </section>
                     <section class="subcontent_column_container">
                         <section class="subcontent_header_grid_container">
-                            <h1>Hobbies/Habilidades:</h1>
+                            <h1>Serviços</h1>
                         </section>
                         <section class="subcontent_grid_container">
-                            <div>Programador</div>
-                            <div>Escritor</div>
-                            <div>Criador de Conteúdo</div>
-                            <div>Web Designer</div>
+                            <div>Desenvolvimento</div>
+                            <div>Literatura e Produções</div>
+                            <div>Edição de Fotos e Vídeos</div>
+                            <div>Web Design</div>
                         </section>
                     </section>
                 </section>
