--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Author:João Pedro Gabriel, Category: Dark Horror History, Title: O Homem do Machado">
+        <meta name="description" content="Author:João Pedro Gabriel, Category: Dark Horror History, Title: Kall Website">
 
         <title>Página Inicial</title>
 
