--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -7,13 +7,16 @@
 
         <title>Página Inicial</title>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">        
         <script src="../script.js" defer></script>
 
     </head>
 
 
     <body>
-        <header class="dinamicHeader"></header>
+        <header class="dinamicHeader"></header><!-- Estrutura de Cabeçalho dinâmico -> Incluso no script.js -->
 
         <section class="main_container">    
             <main>
@@ -31,7 +34,7 @@
                 <section class="container">
                     <div class="header_container">
                         <h1>Produções</h1>
-                        <a href="pages/productions.html">
+                        <a href="https://github.com/kallfsd">
                             <button>Mais</button>
                         </a>
                     </div>
@@ -47,7 +50,7 @@
                 <section class="container">
                     <div class="header_container">
                         <h1>Canais de Contato</h1>
-                        <a href="pages/contact.html">
+                        <a href="pages/support_contact.html">
                             <button>Mais</button>
                         </a>
                     </div>
@@ -119,6 +122,5 @@
             });
         </script>
     </body>
-    <footer class="dinamicFooter"></footer>
-
+    <footer class="dinamicFooter"></footer><!-- Estrutura de Rodapé dinâmico -> Incluso no script.js -->
 </html>
