--- a/pages/history.html
+++ b/pages/history.html
@@ -7,13 +7,16 @@
 
         <title>História</title>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
         <script src="../script.js" defer></script>
 
     </head>
 
 
     <body>
-        <header class="dinamicHeader"></header>
+        <header class="dinamicHeader"></header><!-- Estrutura de Cabeçalho dinâmico -> Incluso no script.js -->
 
         <section class="main_container">
             <main>
@@ -106,6 +109,6 @@
             });
         </script>
     </body>
-    <footer class="dinamicFooter"></footer>
+    <footer class="dinamicFooter"></footer><!-- Estrutura de Rodapé dinâmico -> Incluso no script.js -->
 
 </html>
