--- a/pages/support_contact.html
+++ b/pages/support_contact.html
@@ -7,13 +7,16 @@
 
         <title>Contato</title>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
         <script src="../script.js" defer></script>
 
     </head>
 
 
     <body>
-        <header class="dinamicHeader"></header>
+        <header class="dinamicHeader"></header><!-- Estrutura de Cabeçalho dinâmico -> Incluso no script.js -->
 
         <section class="main_container">
             <main>
@@ -37,7 +40,7 @@
                     </div>
                 </section>
 
-                                <section class="container">
+                <section class="container">
                     <div class="header_container">
                         <h1>Canais de Contato</h1>
                         <a href="pages/contact.html">
@@ -112,6 +115,6 @@
             });
         </script>
     </body>
-    <footer class="dinamicFooter"></footer>
+    <footer class="dinamicFooter"></footer><!-- Estrutura de Rodapé dinâmico -> Incluso no script.js -->
 
 </html>
