--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <section class="container">
                     <div class="header_container">
                         <h1>Produções</h1>
-                        <a href="pages/productions.html">
+                        <a href="https://github.com/kallfsd">
                             <button>Mais</button>
                         </a>
                     </div>
@@ -39,7 +39,7 @@
                 <section class="container">
                     <div class="header_container">
                         <h1>Canais de Contato</h1>
-                        <a href="pages/contact.html">
+                        <a href="pages/support_contact.html">
                             <button>Mais</button>
                         </a>
                     </div>
