--- a/pages/history.html
+++ b/pages/history.html
@@ -70,7 +70,7 @@
                     </section>
                     <div class="divisor_line"></div>
                     <section class="subcontent_image_container">
-                        <img src="../assets/images/AuthorPicture.svg" width="200px" height="200px" alt="Author_Photo">
+                        <img src="../assets/images/AuthorPicture.svg" width="200px" height="200px" alt="Author_Photo" loading="lazy">
                     </section>
                     <section class="subcontent_container">
                         <h1>Nome:</h1> <p>João Pedro Gabriel</p>
@@ -89,10 +89,10 @@
                             <h1>Hobbies/Habilidades:</h1>
                         </section>
                         <section class="subcontent_grid_container">
-                            <div>Programador</div>
-                            <div>Escritor</div>
-                            <div>Criador de Conteúdo</div>
-                            <div>Web Designer</div>
+                            <div><h3>Programador</h3></div>
+                            <div><h3>Escritor</h3></div>
+                            <div><h3>Criador de Conteúdo</h3></div>
+                            <div><h3>Web Designer</h3></div>
                         </section>
                     </section>
                 </section>
