--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -58,7 +58,7 @@
                     </section>
                     <div class="divisor_line"></div>
                     <section class="subcontent_image_container">
-                        <img src="assets/images/AuthorPicture.svg" width="200px" height="200px" alt="Author_Photo">
+                        <img src="assets/images/AuthorPicture.svg" width="200px" height="200px" alt="Author_Photo" loading="lazy">
                     </section>
                     <section class="subcontent_container">
                         <h1>Nome:</h1> <p>João Pedro Gabriel</p>
