--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="header_container">
                         <h1>Produções</h1>
                         <a href="https://github.com/kallfsd">
-                            <button>Mais</button>
+                            <button>Veja as Produções</button>
                         </a>
                     </div>
                     <div class="divisor_line"></div>
@@ -40,7 +40,7 @@
                     <div class="header_container">
                         <h1>Canais de Contato</h1>
                         <a href="pages/support_contact.html">
-                            <button>Mais</button>
+                            <button>Envie-nos um Email</button>
                         </a>
                     </div>
                     <div class="divisor_line"></div>
@@ -48,19 +48,19 @@
                         <section class="subcontent_column_container">
                             <section class="subcontent_grid_container">
                                 <a href="https://www.linkedin.com/in/joão-pedro-gabriel-7628b02b3"><div class="character_container">
-                                    <img src="assets/images/linkedin_logo.svg" width="100px" height="100px" alt="Linked In Logo">
+                                    <img src="assets/images/linkedin_logo.svg" width="100px" height="100px" alt="Linked In Logo" loading="lazy">
                                     <section class="character_name">
                                         <h1>Linked In</h1>
                                     </section>
                                 </div></a>
                                 <a href="https://github.com/joaopedrogabriel"><div class="character_container">
-                                    <img src="assets/images/github_logo.svg" width="100px" height="100px" alt="Github Logo">
+                                    <img src="assets/images/github_logo.svg" width="100px" height="100px" alt="Github Logo" id="github" loading="lazy">
                                     <section class="character_name">
                                         <h1>Github</h1>
                                     </section>
                                 </div></a>
                                 <a href="https://www.instagram.com/joaogabriel_pedrobr/"><div class="character_container">
-                                    <img src="assets/images/instagram_logo.svg" width="100px" height="100px" alt="Instagram Logo">
+                                    <img src="assets/images/instagram_logo.svg" width="100px" height="100px" alt="Instagram Logo" loading="lazy">
                                     <section class="character_name">
                                         <h1>Instagram</h1>
                                     </section>
@@ -78,7 +78,7 @@
                     </section>
                     <div class="divisor_line"></div>
                     <section class="subcontent_image_container">
-                        <img src="assets/images/Logo_KallFullstackDevelopment.svg" width="200px" height="200px" alt="Author_Photo">
+                        <img src="assets/images/Logo_KallFullstackDevelopment.svg" width="200px" height="200px" alt="Author_Photo" loading="lazy">
                     </section>
                     <section class="content_container">
                         <h1>Desenvolvimento</h1> <p>Kall - FullStack Development</p>
@@ -91,10 +91,10 @@
                             <h1>Serviços</h1>
                         </section>
                         <section class="subcontent_grid_container">
-                            <div>Desenvolvimento</div>
-                            <div>Literatura e Produções</div>
-                            <div>Edição de Fotos e Vídeos</div>
-                            <div>Web Design</div>
+                            <div><h3>Desenvolvimento</h3></div>
+                            <div><h3>Literatura e Produções</h3></div>
+                            <div><h3>Edição de Fotos e Vídeos</h3></div>
+                            <div><h3>Web Design</h3></div>
                         </section>
                     </section>
                 </section>
