--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             <main>
                 <section class="container">
                     <div class="header_container">
-                        <h1>Produções</h1>
-                        <a href="https://github.com/kallfsd">
-                            <button>Veja as Produções</button>
+                        <h1>Kall Productions</h1>
+                        <a href="https://kallfsd.github.io/kallproductions/index.html">
+                            <button>Veja nossas Produções</button>
                         </a>
                     </div>
                     <div class="divisor_line"></div>
                     <div class="content_container stack">
                         <p>O Homem do Machado</p>
-                        <a href="https://kallfsd.github.io/hm-website/">
+                        <a href="https://kallfsd.github.io/kallproductions/pages/productions/hm/index.html">
                             <button>Ver Produção</button>
                         </a>
                     </div>
