--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -34,14 +34,14 @@
                 <section class="container">
                     <div class="header_container">
                         <h1>Produções</h1>
-                        <a href="https://github.com/kallfsd">
+                        <a href="https://kallfsd.github.io/kallproductions/index.html">
                             <button>Veja as Produções</button>
                         </a>
                     </div>
                     <div class="divisor_line"></div>
                     <div class="content_container stack">
                         <p>O Homem do Machado</p>
-                        <a href="https://kallfsd.github.io/hm-website/">
+                        <a href="https://kallfsd.github.io/kallproductions/pages/productions/hm/index.html">
                             <button>Ver Produção</button>
                         </a>
                     </div>
